--- a/HungHaStore/Views/Shared/_Layout.cshtml
+++ b/HungHaStore/Views/Shared/_Layout.cshtml
@@ -56,9 +56,9 @@
                 <div class="col-lg-6">
                     <nav class="header__menu">
                         <ul>
-                            <li class="active"><a href="./index.html">TRANG CHỦ</a></li>
-                            <li><a href="./shop-grid.html">SẢN PHẨM</a></li>
-                            <li><a href="./blog.html">GIỚI THIỆU</a></li>
+                            <li class="active"><a href="@Url.Action("Index","Home")">TRANG CHỦ</a></li>
+                            <li><a href="@Url.Action("Index","Product")">SẢN PHẨM</a></li>
+                            <li><a href="@Url.Action("Index","About")">GIỚI THIỆU</a></li>
                             <li><a href="./contact.html">LIÊN HỆ</a></li>
                         </ul>
                     </nav>
@@ -77,6 +77,46 @@
             </div>
         </div>
     </header>
+    <section class="hero hero-normal">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3">
+                    <div class="hero__categories">
+                        <div class="hero__categories__all">
+                            <i class="fa fa-bars"></i>
+                            <span>Danh mục</span>
+                        </div>
+                        <ul>
+                            <li><a href="#">Giường</a></li>
+                            <li><a href="#">Tủ quần áo</a></li>
+                            <li><a href="#">Bàn làm việc</a></li>
+                            <li><a href="#">Bàn trang điểm</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-9">
+                    <div class="hero__search">
+                        <div class="hero__search__form">
+                            <form action="#">
+                                <input type="text" placeholder="Bạn muốn tìm gì?">
+                                <button type="submit" class="site-btn">SEARCH</button>
+                            </form>
+                        </div>
+                        <div class="hero__search__phone">
+                            <div class="hero__search__phone__icon">
+                                <i class="fa fa-phone"></i>
+                            </div>
+                            <div class="hero__search__phone__text">
+                                <h5>+84 11.188.888</h5>
+                                <span>Hỗ trợ 24/7</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
+    </section>
     @RenderBody()
     <footer class="footer spad">
         <div class="container">
@@ -113,21 +153,6 @@
                             <a href="#"><i class="fa fa-twitter"></i></a>
                             <a href="#"><i class="fa fa-pinterest"></i></a>
                         </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="footer__copyright">
-                        <div class="footer__copyright__text">
-                            <p>
-                                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                                Copyright ©
-                                <script>document.write(new Date().getFullYear());</script>2022 All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-                                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                            </p>
-                        </div>
-                        <div class="footer__copyright__payment"><img src="~/Assest/img/payment-item.png" alt=""></div>
                     </div>
                 </div>
             </div>
