--- a/HungHaStore/Views/Shared/_Layout.cshtml
+++ b/HungHaStore/Views/Shared/_Layout.cshtml
@@ -46,7 +46,7 @@
                                 </ul>
                             </div>
                             <div class="header__top__right__auth">
-                                <a href="#"><i class="fa fa-user"></i> Login</a>
+                                <a href="@Url.Action("Login", "Security")"><i class="fa fa-user"></i> Login</a>
                             </div>
                         </div>
                     </div>
@@ -121,7 +121,7 @@
                     </div>
                     @if (currentAction == "Home/Index")
                     {
-                    <div class="hero__item set-bg" data-setbg="/Assest/img/hero/banner.jpg" style="background-image: url(&quot;/Assest/img/hero/banner.jpg&quot;);">
+                    <div class="hero__item set-bg" data-setbg="/Assest/img/hero/banner.jpg" style="background-position: unset;">
                     </div>
                     }
                 </div>
