--- a/HungHaStore/Views/Shared/_Layout.cshtml
+++ b/HungHaStore/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
                                 <a href="#"><i class="fa fa-pinterest-p"></i></a>
                             </div>
                             <div class="header__top__right__language">
-                                <img src="~/Assest//Assest/img/language.png" alt="">
+                                <img src="/Assest/img/language.png" alt="">
                                 <div>English</div>
                                 <span class="arrow_carrot-down"></span>
                                 <ul>
@@ -57,7 +57,7 @@
             <div class="row">
                 <div class="col-lg-3">
                     <div class="header__logo">
-                        <a href="./index.html"><img src="~/Assest//Assest/img/logo.png" alt=""></a>
+                        <a href="./index.html"><img src="/Assest/img/logo.png" alt=""></a>
                     </div>
                 </div>
                 <div class="col-lg-6">
@@ -84,7 +84,7 @@
             </div>
         </div>
     </header>
-    <section class="hero @{_class_hero_normal = currentAction == "Home/Index" ? "hero-nomal" : "";@_class_hero_normal}">
+    <section class="hero @{_class_hero_normal = currentAction != "Home/Index" ? "hero-normal" : "";@_class_hero_normal}">
         <div class="container">
             <div class="row">
                 <div class="col-lg-3">
@@ -136,7 +136,7 @@
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="footer__about">
                         <div class="footer__about__logo">
-                            <a href="./index.html"><img src="~/Assest//Assest/img/logo.png" alt=""></a>
+                            <a href="./index.html"><img src="/Assest/img/logo.png" alt=""></a>
                         </div>
                         <ul>
                             <li>Địa chỉ: 96 Định Công - Thanh Xuân - Hà Nội</li>
