--- a/HungHaStore/Views/Product/Index.cshtml
+++ b/HungHaStore/Views/Product/Index.cshtml
@@ -21,10 +21,10 @@
                     <div class="sidebar__item">
                         <h4>Danh mục</h4>
                         <ul>
-                            <li><input type="checkbox" name="danh_muc_sp" value="" /> Giường</li>
-                            <li><input type="checkbox" name="danh_muc_sp" value="" /> Tủ quần áo</li>
-                            <li><input type="checkbox" name="danh_muc_sp" value="" /> Bàn làm việc</li>
-                            <li><input type="checkbox" name="danh_muc_sp" value="" /> Tủ trang điểm</li>
+                            <li class="p-2"><input type="checkbox" name="danh_muc_sp" value="" /> Giường</li>
+                            <li class="p-2"><input type="checkbox" name="danh_muc_sp" value="" /> Tủ quần áo</li>
+                            <li class="p-2"><input type="checkbox" name="danh_muc_sp" value="" /> Bàn làm việc</li>
+                            <li class="p-2"><input type="checkbox" name="danh_muc_sp" value="" /> Tủ trang điểm</li>
                         </ul>
                     </div>
                     <div class="sidebar__item">
