--- a/HungHaStore/Views/Shared/_Layout.cshtml
+++ b/HungHaStore/Views/Shared/_Layout.cshtml
@@ -1,9 +1,13 @@
-﻿@{ 
+﻿@using HungHaStore.Models;
+@{ 
+    Model1 db = new Model1();
+    IEnumerable<loai_sp> loaiSanPham = db.loai_sp.ToList();
     string _active = "";
     string _controller = ViewContext.RouteData.Values["controller"].ToString();
     string _action = ViewContext.RouteData.Values["action"].ToString();
     string currentAction = ViewContext.RouteData.Values["controller"].ToString() + "/" + ViewContext.RouteData.Values["action"].ToString();
     string _class_hero_normal = "";
+    string search = Request.QueryString["search"];
 }
 <!DOCTYPE html>
 <html>
@@ -24,7 +28,7 @@
                         <div class="header__top__left">
                             <ul>
                                 <li><i class="fa fa-envelope"></i> hello@colorlib.com</li>
-                                <li>Free Shipping for all Order of $99</li>
+                                <li>Miễn phí ship cho đơn hàng trên 1 triệu</li>
                             </ul>
                         </div>
                     </div>
@@ -38,11 +42,12 @@
                             </div>
                             <div class="header__top__right__language">
                                 <img src="/Assest/img/language.png" alt="">
-                                <div>English</div>
+                                <div>Việt Nam</div>
                                 <span class="arrow_carrot-down"></span>
                                 <ul>
                                     <li><a href="#">Spanis</a></li>
                                     <li><a href="#">English</a></li>
+                                    <li><a href="#">Việt Nam</a></li>
                                 </ul>
                             </div>
                             <div class="header__top__right__auth">
@@ -57,7 +62,7 @@
             <div class="row">
                 <div class="col-lg-3">
                     <div class="header__logo">
-                        <a href="./index.html"><img src="/Assest/img/logo.png" alt=""></a>
+                        <a href="@Url.Action("Index","Home")"><img src="/Assest/img/logo.png" alt=""></a>
                     </div>
                 </div>
                 <div class="col-lg-6">
@@ -94,18 +99,18 @@
                             <span>Danh mục</span>
                         </div>
                         <ul style="@{string display = currentAction != "Home/Index"?"display:none":""; @display}">
-                            <li><a href="#">Giường</a></li>
-                            <li><a href="#">Tủ quần áo</a></li>
-                            <li><a href="#">Bàn làm việc</a></li>
-                            <li><a href="#">Bàn trang điểm</a></li>
+                            @foreach (loai_sp item in loaiSanPham)
+                            {
+                                <li><a href="#">@item.ten</a></li>
+                            }
                         </ul>
                     </div>
                 </div>
                 <div class="col-lg-9">
                     <div class="hero__search">
                         <div class="hero__search__form">
-                            <form action="#">
-                                <input type="text" placeholder="Bạn muốn tìm gì?">
+                            <form action="@Url.Action("Index","Product")" method="GET">
+                                <input type="text" name="search" placeholder="Bạn muốn tìm gì?" value="@search">
                                 <button type="submit" class="site-btn">SEARCH</button>
                             </form>
                         </div>
@@ -136,7 +141,7 @@
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="footer__about">
                         <div class="footer__about__logo">
-                            <a href="./index.html"><img src="/Assest/img/logo.png" alt=""></a>
+                            <a href="@Url.Action("Index","Home")"><img src="/Assest/img/logo.png" alt=""></a>
                         </div>
                         <ul>
                             <li>Địa chỉ: 96 Định Công - Thanh Xuân - Hà Nội</li>
