--- a/HungHaStore/Views/Cart/Index.cshtml
+++ b/HungHaStore/Views/Cart/Index.cshtml
@@ -1,18 +1,14 @@
-﻿
+﻿@using HungHaStore.Helper;
 @{
+    var currency = System.Globalization.CultureInfo.GetCultureInfo("vi-VN");
     ViewBag.Title = "Index";
 }
-
 <section class="breadcrumb-section set-bg" data-setbg="/Assest/img/breadcrumb.jpg" style="background-image: url(&quot;/Assest/img/breadcrumb.jpg&quot;);">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
                 <div class="breadcrumb__text">
-                    <h2>Shopping Cart</h2>
-                    <div class="breadcrumb__option">
-                        <a href="./index.html">Home</a>
-                        <span>Shopping Cart</span>
-                    </div>
+                    <h2>Giỏ hàng</h2>
                 </div>
             </div>
         </div>
@@ -34,72 +30,34 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
-                                <td class="shoping__cart__item">
-                                    <img src="/Assest/img/product/Ban-an-bang-go-chat-luong-cao-GHS-41081-ava-300x300.png" alt="" height="100px" width="auto">
-                                    <h5>Bàn ăn bằng gỗ chất lương cao SHS 41081</h5>
-                                </td>
-                                <td class="shoping__cart__price">
-                                    1.250.000 đ
-                                </td>
-                                <td class="shoping__cart__quantity">
-                                    <div class="quantity">
-                                        <div class="pro-qty">
-                                            <input type="text" value="1">
-                                        </div>
-                                    </div>
-                                </td>
-                                <td class="shoping__cart__total">
-                                    1.250.000 đ
-                                </td>
-                                <td class="shoping__cart__item__close">
-                                    <span class="icon_close"></span>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td class="shoping__cart__item">
-                                    <img src="/Assest/img/product/Ban-an-bang-go-chat-luong-cao-GHS-41081-ava-300x300.png" alt="" height="100px" width="auto">
-                                    <h5>Bàn ăn bằng gỗ chất lương cao SHS 41081</h5>
-                                </td>
-                                <td class="shoping__cart__price">
-                                    1.250.000 đ
-                                </td>
-                                <td class="shoping__cart__quantity">
-                                    <div class="quantity">
-                                        <div class="pro-qty">
-                                            <input type="text" value="1">
-                                        </div>
-                                    </div>
-                                </td>
-                                <td class="shoping__cart__total">
-                                    1.250.000 đ
-                                </td>
-                                <td class="shoping__cart__item__close">
-                                    <span class="icon_close"></span>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td class="shoping__cart__item">
-                                    <img src="/Assest/img/product/Ban-an-bang-go-chat-luong-cao-GHS-41081-ava-300x300.png" alt="" height="100px" width="auto">
-                                    <h5>Bàn ăn bằng gỗ chất lương cao SHS 41081</h5>
-                                </td>
-                                <td class="shoping__cart__price">
-                                    1.250.000 đ
-                                </td>
-                                <td class="shoping__cart__quantity">
-                                    <div class="quantity">
-                                        <div class="pro-qty">
-                                            <input type="text" value="1">
-                                        </div>
-                                    </div>
-                                </td>
-                                <td class="shoping__cart__total">
-                                    1.250.000 đ
-                                </td>
-                                <td class="shoping__cart__item__close">
-                                    <span class="icon_close"></span>
-                                </td>
-                            </tr>
+                            @if (Model != null)
+                            {
+                                foreach (Cart item in Model)
+                                {
+                                    <tr>
+                                        <td class="shoping__cart__item">
+                                            <img src="/Assest/img/product/@item.hinh_anh" alt="@item.ten" height="100px" width="auto">
+                                            <h5>@item.ten</h5>
+                                        </td>
+                                        <td class="shoping__cart__price">
+                                            @String.Format(currency, "{0:c0}", item.gia_tien)
+                                        </td>
+                                        <td class="shoping__cart__quantity">
+                                            <div class="quantity">
+                                                <div class="pro-qty">
+                                                    <input type="text" value="1">
+                                                </div>
+                                            </div>
+                                        </td>
+                                        <td class="shoping__cart__total">
+                                            @String.Format(currency, "{0:c0}", item.gia_tien)
+                                        </td>
+                                        <td class="shoping__cart__item__close">
+                                            <span class="icon_close"></span>
+                                        </td>
+                                    </tr>
+                                }
+                            }
                         </tbody>
                     </table>
                 </div>
@@ -108,7 +66,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="shoping__cart__btns">
-                    <a href="#" class="primary-btn cart-btn">THÊM SẢN PHẨM</a>
+                    <a href="@Url.Action("Index","Product")" class="primary-btn cart-btn">THÊM SẢN PHẨM</a>
                 </div>
             </div>
             <div class="col-lg-6">
@@ -127,7 +85,7 @@
                     <h5>TỔNG</h5>
                     <ul>
                         <li>PHỤ <span>0 đ</span></li>
-                        <li>TỔNG <span>3,750,000 đ</span></li>
+                        <li>TỔNG <span>@String.Format(currency, "{0:c0}", CartHelper.sumMoney())</span></li>
                     </ul>
                     <a href="#" class="primary-btn">XỬ LÝ HÓA ĐƠN</a>
                 </div>
