--- a/HungHaStore/Views/Home/Index.cshtml
+++ b/HungHaStore/Views/Home/Index.cshtml
@@ -22,10 +22,11 @@
             {
                 <div class="col-lg-3 col-md-4 col-sm-6 mix @sanPham.loai_sp.ten">
                     <div class="featured__item">
-                        <div class="featured__item__pic set-bg" data-setbg="/Assest/img/product/@sanPham.hinh_anh">
+                        <div class="featured__item__pic set-bg" data-id="@sanPham.id">
+                            <img src="/Assest/img/product/@sanPham.hinh_anh" alt="@sanPham.ten" />
                             <ul class="featured__item__pic__hover">
-                                <li><a href="#"><i class="fa fa-retweet"></i></a></li>
-                                <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
+                                <li><a href="javascript:void(0)"><i class="fa fa-retweet"></i></a></li>
+                                <li><a href="javascript:void(0)" class="add-to-cart"><i class="fa fa-shopping-cart"></i></a></li>
                             </ul>
                         </div>
                         <div class="featured__item__text">
