--- a/HungHaStore/Views/Home/Index.cshtml
+++ b/HungHaStore/Views/Home/Index.cshtml
@@ -20,7 +20,7 @@
         <div class="row featured__filter" id="MixItUp866079">
             @foreach (san_pham sanPham in sanPhamNoiBat)
             {
-                <div class="col-lg-3 col-md-4 col-sm-6 mix @sanPham.loai_sp.ten">
+                <div class="col-lg-3 col-md-4 col-sm-6">
                     <div class="featured__item">
                         <div class="featured__item__pic set-bg" data-id="@sanPham.id">
                             <img src="/Assest/img/product/@sanPham.hinh_anh" alt="@sanPham.ten" />
