--- a/HungHaStore/Views/Product/Detail.cshtml
+++ b/HungHaStore/Views/Product/Detail.cshtml
@@ -1,12 +1,21 @@
-﻿@{
-    ViewBag.Title = "Detail";
+﻿@using HungHaStore.Models
+@model HungHaStore.Models.san_pham
+@{
+    var currency = System.Globalization.CultureInfo.GetCultureInfo("vi-VN");
+    ViewBag.Title = Model.ten;
+    List<san_pham> sanPhamLienQuan = ViewBag.sanPhamLienQuan;
+    string trang_thai = "<span class=\"text-danger\">Hết hàng</span>";
+    if (Model.kho != null && Model.kho.so_luong > 0)
+    {
+        trang_thai = "<span>Còn hàng</span>";
+    }
 }
 <section class="breadcrumb-section set-bg" data-setbg="/Assest/img/breadcrumb.jpg" style="background-image: url(&quot;/Assest/img/breadcrumb.jpg&quot;);">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
                 <div class="breadcrumb__text">
-                    <h2>Bàn ăn bằng gỗ chất lương cao SHS 41081</h2>
+                    <h2>@Model.ten</h2>
                 </div>
             </div>
         </div>
@@ -18,13 +27,13 @@
             <div class="col-lg-6 col-md-6">
                 <div class="product__details__pic">
                     <div class="product__details__pic__item">
-                        <img class="product__details__pic__item--large" src="/Assest/img/product/Ban-an-bang-go-chat-luong-cao-GHS-41081-ava-300x300.png" alt="">
+                        <img class="product__details__pic__item--large" src="/Assest/img/product/@Model.hinh_anh" alt="">
                     </div>
                 </div>
             </div>
             <div class="col-lg-6 col-md-6">
                 <div class="product__details__text">
-                    <h3>Bàn ăn bằng gỗ chất lương cao SHS 41081</h3>
+                    <h3>@Model.ten</h3>
                     <div class="product__details__rating">
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star"></i>
@@ -33,9 +42,9 @@
                         <i class="fa fa-star-half-o"></i>
                         <span>(18 reviews)</span>
                     </div>
-                    <div class="product__details__price">1.500.000 đ</div>
+                    <div class="product__details__price">@String.Format(currency, "{0:c0}", Model.gia_tien)</div>
                     <p>
-                        Giá bát nâng hạ cao cấp hiện đại GHX-7162 sợ hữu thiết kế thông minh mang lại sự tiện lợi cho người dùng trong việc sắp xếp bát đĩa, hoạt động nấu nướng của gia đình. Sản phẩm giá bát nâng hạ này có 2 tầng chứa, có thể lưu trữ được số lượng lớn bát đĩa. Bạn hãy cùng chúng tôi tham khảo bài viết dưới đây để có thêm thông tin chi tiết về sản phẩm nha!
+                        @Model.mo_ta
                     </p>
                     <div class="product__details__quantity">
                         <div class="quantity">
@@ -45,8 +54,19 @@
                         </div>
                     </div>
                     <a href="#" class="primary-btn">THÊM GIỎ HÀNG</a>
+                    @if (Model.kho == null || Model.kho.so_luong == 0)
+                    {
+                        <div class="mt-5 p-5 border">
+                            <h6 class="text-center mb-4">ĐĂNG KÝ NHẬN THÔNG TIN KHI CÓ HÀNG</h6>
+                            <input type="text" id="order-email" class="form-control rounded-pill mb-4" style="background: #f9f9f9;" value="" />
+                            <div class="form-group text-center">
+                                <button type="button" id="order-submit" class="btn btn-info">Đăng ký nhận thông tin</button>
+                            </div>
+                        </div>
+                    }
+
                     <ul>
-                        <li><b>Trạng thái</b> <span>Còn hàng</span></li>
+                        <li><b>Trạng thái</b>@Html.Raw(trang_thai)</li>
                         <li><b>Vận chuyển</b> <span>Miễn phí giao hàng</span></li>
                         <li>
                             <b>Chia sẻ</b>
@@ -72,7 +92,7 @@
                             <div class="product__details__tab__desc">
                                 <h6>Thông tin sản phẩm</h6>
                                 <p>
-                                    Giá bát nâng hạ cao cấp hiện đại GHX-7162 sợ hữu thiết kế thông minh mang lại sự tiện lợi cho người dùng trong việc sắp xếp bát đĩa, hoạt động nấu nướng của gia đình. Sản phẩm giá bát nâng hạ này có 2 tầng chứa, có thể lưu trữ được số lượng lớn bát đĩa. Bạn hãy cùng chúng tôi tham khảo bài viết dưới đây để có thêm thông tin chi tiết về sản phẩm nha!
+                                    @Model.mo_ta
                                 </p>
                             </div>
                         </div>
@@ -92,66 +112,43 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-3 col-md-4 col-sm-6">
-                <div class="product__item">
-                    <div class="product__item__pic set-bg" data-setbg="/Assest/img/product/Ban-an-bang-go-chat-luong-cao-GHS-41081-ava-300x300.png" style="background-image: url(&quot;/Assest/img/product/Ban-an-bang-go-chat-luong-cao-GHS-41081-ava-300x300.png&quot;);">
-                        <ul class="product__item__pic__hover">
-                            <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                            <li><a href="#"><i class="fa fa-retweet"></i></a></li>
-                            <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
-                        </ul>
-                    </div>
-                    <div class="product__item__text">
-                        <h6><a href="#">Bàn ăn bằng gỗ chất lương cao SHS 41081</a></h6>
-                        <h5>1.250.000 đ</h5>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-4 col-sm-6">
-                <div class="product__item">
-                    <div class="product__item__pic set-bg" data-setbg="/Assest/img/product/Ban-an-bang-go-chat-luong-cao-GHS-41081-ava-300x300.png" style="background-image: url(&quot;/Assest/img/product/Ban-an-bang-go-chat-luong-cao-GHS-41081-ava-300x300.png&quot;);">
-                        <ul class="product__item__pic__hover">
-                            <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                            <li><a href="#"><i class="fa fa-retweet"></i></a></li>
-                            <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
-                        </ul>
-                    </div>
-                    <div class="product__item__text">
-                        <h6><a href="#">Bàn ăn bằng gỗ chất lương cao SHS 41081</a></h6>
-                        <h5>1.250.000 đ</h5>
+            @foreach (san_pham item in sanPhamLienQuan)
+            {
+                <div class="col-lg-3 col-md-4 col-sm-6">
+                    <div class="product__item">
+                        <div class="product__item__pic set-bg" data-setbg="/Assest/img/product/@item.hinh_anh" style="background-image: url(&quot;/Assest/img/product/Ban-an-bang-go-chat-luong-cao-GHS-41081-ava-300x300.png&quot;);">
+                            <ul class="product__item__pic__hover">
+                                <li><a href="#"><i class="fa fa-retweet"></i></a></li>
+                                <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
+                            </ul>
+                        </div>
+                        <div class="product__item__text">
+                            <h6><a href="#">@item.ten</a></h6>
+                            <h5>@String.Format(currency, "{0:c0}", item.gia_tien)</h5>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-lg-3 col-md-4 col-sm-6">
-                <div class="product__item">
-                    <div class="product__item__pic set-bg" data-setbg="/Assest/img/product/Ban-an-bang-go-chat-luong-cao-GHS-41081-ava-300x300.png" style="background-image: url(&quot;/Assest/img/product/Ban-an-bang-go-chat-luong-cao-GHS-41081-ava-300x300.png&quot;);">
-                        <ul class="product__item__pic__hover">
-                            <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                            <li><a href="#"><i class="fa fa-retweet"></i></a></li>
-                            <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
-                        </ul>
-                    </div>
-                    <div class="product__item__text">
-                        <h6><a href="#">Bàn ăn bằng gỗ chất lương cao SHS 41081</a></h6>
-                        <h5>1.250.000 đ</h5>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-4 col-sm-6">
-                <div class="product__item">
-                    <div class="product__item__pic set-bg" data-setbg="/Assest/img/product/Ban-an-bang-go-chat-luong-cao-GHS-41081-ava-300x300.png" style="background-image: url(&quot;/Assest/img/product/Ban-an-bang-go-chat-luong-cao-GHS-41081-ava-300x300.png&quot;);">
-                        <ul class="product__item__pic__hover">
-                            <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                            <li><a href="#"><i class="fa fa-retweet"></i></a></li>
-                            <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
-                        </ul>
-                    </div>
-                    <div class="product__item__text">
-                        <h6><a href="#">Bàn ăn bằng gỗ chất lương cao SHS 41081</a></h6>
-                        <h5>1.250.000 đ</h5>
-                    </div>
-                </div>
-            </div>
+            }
         </div>
     </div>
 </section>
+<script>
+    $(document).on("click", "#order-submit", function () {
+        $.ajax({
+            url: "@Url.Action("Order","Ajax")",
+            type: "get",
+            data: {
+                email: $("#order-email").val(),
+                id_sp: @Model.id,
+            },
+            dataType: 'json',
+            success: function (response) {
+                if (response == true) {
+                    alert("Đăng ký nhận thông tin thành công!");
+                } else {
+                    alert("Xảy ra lỗi.");
+                }
+            }
+        });
+    });
+</script>
