--- a/HungHaStore/Areas/Admin/Views/AProduct/Edit.cshtml
+++ b/HungHaStore/Areas/Admin/Views/AProduct/Edit.cshtml
@@ -1,27 +1,26 @@
 ﻿@model HungHaStore.Models.san_pham
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Edit";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Create</h2>
 
-@using (Html.BeginForm()) 
+<h2>Thông tin sản phẩm</h2>
+<br />
+<p><label class="control-label col-md-2"><a href="@Url.Action("Edit", "AStore", new { id=Model.id_kho })"><b>Cập nhập số lượng trong kho</b></a></label></p>
+<p><label class="control-label col-md-2"><a href="@Url.Action("Edit", "AStore", new { id=Model.id_kho })"><b>@Html.ActionLink("Back to List", "Index")</b></a></label></p>
+<div>
+    
+</div>
+@using (Html.BeginForm("update-san-pham","AProduct/Edit", FormMethod.Post,new { @enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>san_pham</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.id, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.id, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.id, "", new { @class = "text-danger" })
-            </div>
-        </div>
+        @Html.HiddenFor(model => model.id)
 
         <div class="form-group">
             @Html.LabelFor(model => model.ten, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -32,7 +31,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.id_loai_sp, "id_loai_sp", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.id_loai_sp, "Danh mục sản phẩm", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("id_loai_sp", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.id_loai_sp, "", new { @class = "text-danger" })
@@ -64,15 +63,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.id_kho, "id_kho", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("id_kho", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.id_kho, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.id_ncc, "id_ncc", htmlAttributes: new { @class = "control-label col-md-2" })
+            <label class="control-label col-md-2" for="id_ncc">Nhà cung cấp</label>
             <div class="col-md-10">
                 @Html.DropDownList("id_ncc", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.id_ncc, "", new { @class = "text-danger" })
@@ -80,13 +71,14 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.hinh_anh, htmlAttributes: new { @class = "control-label col-md-2" })
+            <img src="~/Assest/img/product/@Html.DisplayFor(model => model.hinh_anh)" id="img_product" alt="@Html.DisplayFor(model => model.hinh_anh)" style="padding:0px 15px;max-height:200px" />
+            <br />
             <div class="col-md-10">
-                @Html.EditorFor(model => model.hinh_anh, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.hinh_anh, new { htmlAttributes = new { @class = "form-control", @type="hidden" } })
+                @Html.TextBox("fileImg", "", new { type = "file", @class = "form-control" }) <br />
                 @Html.ValidationMessageFor(model => model.hinh_anh, "", new { @class = "text-danger" })
             </div>
         </div>
-
         <div class="form-group">
             @Html.LabelFor(model => model.luot_xem, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -94,23 +86,19 @@
                 @Html.ValidationMessageFor(model => model.luot_xem, "", new { @class = "text-danger" })
             </div>
         </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.tg_tao, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.tg_tao, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.tg_tao, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-success" />
             </div>
         </div>
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+
+<script>
+    $(document).on("change", "#fileImg", function (event) {
+        var url_img = URL.createObjectURL(event.target.files[0]);
+        console.log(url_img);
+        $("#img_product").attr('src', url_img);
+    })
+</script>
