--- a/HungHaStore/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/HungHaStore/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -33,8 +33,8 @@
             <nav class="my-2 my-md-0 mr-md-3">
                 <a class="p-2 text-white active" href="@Url.Action("Index","AProduct")">Sản phẩm</a>
                 <a class="p-2 text-white" href="@Url.Action("Index","ACategory")">Danh mục</a>
-                <a class="p-2 text-white" href="@Url.Action("Index","AStore")">Kho</a>
                 <a class="p-2 text-white" href="@Url.Action("Index","AUser")">Khách hàng</a>
+                <a class="p-2 text-white" href="@Url.Action("Index","AInvoice")">Hóa đơn</a>
             </nav>
         </div>
     </div>
