--- a/HungHaStore/Areas/Admin/Views/ACategory/Index.cshtml
+++ b/HungHaStore/Areas/Admin/Views/ACategory/Index.cshtml
@@ -7,20 +7,22 @@
 
 <h2>Danh mục</h2>
 
-<a href="@Url.Action("Create","ACategory")" class="btn btn-primary my-3">Thêm danh mục</a>
-<table class="table">
-    <tr>
-        <th>
-            Tên
-        </th>
-        <th>
-            Mô tả
-        </th>
-        <th>
-            Thời gian tạo
-        </th>
-        <th></th>
-    </tr>
+<a href="@Url.Action("Create","ACategory")" class="btn btn-outline-info my-3">Thêm danh mục</a>
+<table class="table table-striped border">
+    <thead class="thead-dark">
+        <tr>
+            <th>
+                Tên
+            </th>
+            <th>
+                Mô tả
+            </th>
+            <th>
+                Thời gian tạo
+            </th>
+            <th></th>
+        </tr>
+    </thead>
 @foreach (var item in Model) {
 <tr>
     <td>
