--- a/HungHaStore/Views/Shared/_Layout.cshtml
+++ b/HungHaStore/Views/Shared/_Layout.cshtml
@@ -67,6 +67,10 @@
                                         <div class="dropdown-menu" aria-labelledby="dropinfo">
                                             <a class="dropdown-item" href="@Url.Action("Edit","Profile",new { id = _identity.id})">Thông tin tài khoản</a>
                                             <a class="dropdown-item" href="@Url.Action("ListInvoice","Home")">Hóa đơn</a>
+                                            @if (_identity.quyen == 1)
+                                            {
+                                                <a class="dropdown-item" href="@Url.Action("Index","Admin/Default")">Quản lý</a>
+                                            }
                                             <a class="dropdown-item" href="#">Đổi mật khẩu</a>
                                             <div class="dropdown-divider"></div>
                                             <a class="dropdown-item" href="@Url.Action("Logout","Security")">Đăng xuất</a>
