--- a/HungHaStore/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/HungHaStore/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -35,6 +35,7 @@
                 <a class="p-2 text-white" href="@Url.Action("Index","ACategory")">Danh mục</a>
                 <a class="p-2 text-white" href="@Url.Action("Index","AUser")">Khách hàng</a>
                 <a class="p-2 text-white" href="@Url.Action("Index","AInvoice")">Hóa đơn</a>
+                <a class="p-2 text-white" href="@Url.Action("Index","AProvider")">Nhà cung cấp</a>
             </nav>
         </div>
     </div>
